objects/Quote/fields/Calculated_Annualized_Software_Spend__c.field-meta.xml
<CustomField>
    <fullName>Calculated_Annualized_Software_Spend__c</fullName>
    <label>Calculated Annualized Software Spend</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>