objects/Quote/fields/ELV_Account_Contracted_Price__c.field-meta.xml
<CustomField>
    <fullName>ELV_Account_Contracted_Price__c</fullName>
    <formula>Opportunity.Account.Contracted_Pricing__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Contracted Price</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>