objects/Quote/fields/ELV_Account_Record_Type_ID__c.field-meta.xml
<CustomField>
    <fullName>ELV_Account_Record_Type_ID__c</fullName>
    <formula>Opportunity.Account.RecordTypeId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Record Type ID</label>
    <type>Text</type>
</CustomField>