objects/Quote/fields/ELV_Account_Segment__c.field-meta.xml
<CustomField>
    <fullName>ELV_Account_Segment__c</fullName>
    <formula>IF(AND(ELV_Business_Motion_Oppty__c = &apos;MSP&apos;, NOT(ISBLANK(ELV_End_User_Account__c))), TEXT(ELV_End_User_Account__r.Segment__c), TEXT(Opportunity.Account.Segment__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Segment</label>
    <type>Text</type>
</CustomField>