objects/Quote/fields/ELV_Account_Support_Model__c.field-meta.xml
<CustomField>
    <fullName>ELV_Account_Support_Model__c</fullName>
    <formula>TEXT(Opportunity.Account.Support_Model__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Support Model</label>
    <type>Text</type>
</CustomField>