objects/Quote/fields/ELV_Account_Type__c.field-meta.xml
<CustomField>
    <fullName>ELV_Account_Type__c</fullName>
    <formula>IF(ELV_Business_Motion_Oppty__c = &apos;MSP&apos;, TEXT(ELV_End_User_Account__r.Type), TEXT(Opportunity.Account.Type))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Type</label>
    <type>Text</type>
</CustomField>