objects/Quote/fields/ELV_AccountName__c.field-meta.xml
<CustomField>
    <fullName>ELV_AccountName__c</fullName>
    <description>TNCI-222 - Required for use in approvals pro classic email template merge field</description>
    <formula>Opportunity.Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ELV Account Name</label>
    <type>Text</type>
</CustomField>