objects/Quote/fields/ELV_Active_Modules__c.field-meta.xml
<CustomField>
    <fullName>ELV_Active_Modules__c</fullName>
    <formula>ELV_End_User_Account__r.Active_Packages__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active Modules</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>