objects/Quote/fields/ELV_Active_Operators_Screen_Share__c.field-meta.xml
<CustomField>
    <fullName>ELV_Active_Operators_Screen_Share__c</fullName>
    <formula>IF(ELV_Operators_Approval_Screen_Share__c &gt; 0 &amp;&amp; ISPICKVAL(ELV_ApprovalStatus__c,&apos;Approved&apos;), ELV_Operators_Approval_Screen_Share__c, Opportunity.Account.Active_Operators_Screen_Share__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Operators (ScreenShare)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>