objects/Quote/fields/ELV_Actual_Uplift__c.field-meta.xml
<CustomField>
    <fullName>ELV_Actual_Uplift__c</fullName>
    <formula>IF(ISPICKVAL(ELV_Type__c,&quot;Renewal&quot;), ((ELV_Exit_ARR__c - ELV_Incoming_ARR_formula__c)/ELV_Incoming_ARR_formula__c), null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual Uplift</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>