objects/Quote/fields/ELV_Add_Type_On_the_Quote__c.field-meta.xml
<CustomField>
    <fullName>ELV_Add_Type_On_the_Quote__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Add Type On the Quote</label>
    <type>Checkbox</type>
</CustomField>