objects/Quote/fields/ELV_Additional_Approver_1__c.field-meta.xml
<CustomField>
    <fullName>ELV_Additional_Approver_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Additional Approver 1</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Quotes6FrJ</relationshipName>
    <type>Lookup</type>
</CustomField>