objects/Quote/fields/ELV_Additional_Approver_2__c.field-meta.xml
<CustomField>
    <fullName>ELV_Additional_Approver_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Additional Approver 2</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Quotes6FuX</relationshipName>
    <type>Lookup</type>
</CustomField>