objects/Quote/fields/ELV_Additional_Terms_2__c.field-meta.xml
<CustomField>
    <fullName>ELV_Additional_Terms_2__c</fullName>
    <label>Additional Terms # 2</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>