objects/Quote/fields/ELV_Additional_Terms_4__c.field-meta.xml
<CustomField>
    <fullName>ELV_Additional_Terms_4__c</fullName>
    <label>Additional Terms #4</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>