objects/Quote/fields/ELV_Additional_Terms__c.field-meta.xml
<CustomField>
    <fullName>ELV_Additional_Terms__c</fullName>
    <label>Additional Terms #1</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>