objects/Quote/fields/ELV_AEMMigrationQuoteNeedsRecalc__c.field-meta.xml
<CustomField>
    <fullName>ELV_AEMMigrationQuoteNeedsRecalc__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AEM Migration Quote needs Recalculation</label>
    <type>Checkbox</type>
</CustomField>