objects/Quote/fields/ELV_Agreement_Date__c.field-meta.xml
<CustomField>
    <fullName>ELV_Agreement_Date__c</fullName>
    <label>Agreement Date</label>
    <type>Date</type>
</CustomField>