objects/Quote/fields/ELV_All_Lines_Min_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>ELV_All_Lines_Min_Start_Date__c</fullName>
    <description>TNCI-206 / ELV-DM-010. Unfiltered MIN of subscription start date across all quote lines. Fallback for the ELV Day 1 ARR Start Date cascade when no line passes the ARR include filter (1,694 such quotes in the CPQ regression population). Distinct from ELV Min Start Date, which is a writable field read by OrderTriggerUtility for NetSuite order events.</description>
    <inlineHelpText>Earliest subscription start date across all lines, no filter.</inlineHelpText>
    <label>All Lines Min Start Date</label>
    <summarizedField>QuoteLineItem.Ruby__SubscriptionStartDate__c</summarizedField>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>