objects/Quote/fields/ELV_Annual_Price_per_EP__c.field-meta.xml
<CustomField>
    <fullName>ELV_Annual_Price_per_EP__c</fullName>
    <formula>IF( NOT(ISBLANK(ELV_Core_Quantity__c)) &amp;&amp; ELV_Core_Quantity__c &lt;&gt; 0, ELV_Tanium_Software_ARR__c / ELV_Core_Quantity__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Annual Price per EP</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>