objects/Quote/fields/ELV_Appliance_SKUs__c.field-meta.xml
<CustomField>
    <fullName>ELV_Appliance_SKUs__c</fullName>
    <label>Appliance SKUs B</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>