objects/Quote/fields/ELV_Apply_Term_Discount__c.field-meta.xml
<CustomField>
    <fullName>ELV_Apply_Term_Discount__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Apply Term Discount</label>
    <type>Checkbox</type>
</CustomField>