objects/Quote/fields/ELV_Apply_Volume_Discount__c.field-meta.xml
<CustomField>
    <fullName>ELV_Apply_Volume_Discount__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Apply Volume Discount</label>
    <type>Checkbox</type>
</CustomField>