objects/Quote/fields/ELV_ApprovalDiscountRegion__c.field-meta.xml
<CustomField>
    <fullName>ELV_ApprovalDiscountRegion__c</fullName>
    <formula>&quot;None&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Approval Discount Region</label>
    <type>Text</type>
</CustomField>