objects/Quote/fields/ELV_AreaVP__c.field-meta.xml
<CustomField>
    <fullName>ELV_AreaVP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Area VP</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Quotes (Area VP)</relationshipLabel>
    <relationshipName>Quotes_Area_VP</relationshipName>
    <type>Lookup</type>
</CustomField>