objects/Quote/fields/ELV_ARR_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>ELV_ARR_Adjustment__c</fullName>
    <label>Sales ARR Adjustment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>