objects/Quote/fields/ELV_ARR_Adjustment_Reason__c.field-meta.xml
<CustomField>
    <fullName>ELV_ARR_Adjustment_Reason__c</fullName>
    <label>ARR Adjustment Reason</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>