objects/Quote/fields/ELV_ARR_Margin__c.field-meta.xml
<CustomField>
    <fullName>ELV_ARR_Margin__c</fullName>
    <formula>IF(
    ELV_ARR_Margin_Override__c &gt; 0,
    ELV_ARR_Margin_Override__c,
    (ELV_Day_1_ARR__c - ELV_Total_COGS__c) / ELV_Day_1_ARR__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales ARR Margin %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>