objects/Quote/fields/ELV_ARR_Margin_Override__c.field-meta.xml
<CustomField>
    <fullName>ELV_ARR_Margin_Override__c</fullName>
    <label>ARR Margin Override</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>