objects/Quote/fields/ELV_ARR_Module_Changes__c.field-meta.xml
<CustomField>
    <fullName>ELV_ARR_Module_Changes__c</fullName>
    <label>ARR Module Changes</label>
    <length>7500</length>
    <type>LongTextArea</type>
</CustomField>