objects/Quote/fields/ELV_Average_Partner_Disc_Change__c.field-meta.xml
<CustomField>
    <fullName>ELV_Average_Partner_Disc_Change__c</fullName>
    <label>Average Partner Disc Change</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>