objects/Quote/fields/ELV_AveragePartnerDiscount__c.field-meta.xml
<CustomField>
    <fullName>ELV_AveragePartnerDiscount__c</fullName>
    <formula>IF(Ruby__TotalAmount__c = 0, 0, (Ruby__TotalAmount__c -  Ruby__SellerTotalAmount__c) / Ruby__TotalAmount__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Avg. Partner Disc. (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>