objects/Quote/fields/ELV_AWS_Marketplace_EDW__c.field-meta.xml
<CustomField>
    <fullName>ELV_AWS_Marketplace_EDW__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AWS Marketplace (EDW)</label>
    <type>Checkbox</type>
</CustomField>