objects/Quote/fields/ELV_Azure_Marketplace__c.field-meta.xml
<CustomField>
    <fullName>ELV_Azure_Marketplace__c</fullName>
    <formula>IF(ELV_Partner__r.Name = $Label.Azure_Marketplace_Partner_Name, TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Azure Marketplace</label>
    <type>Checkbox</type>
</CustomField>