objects/Quote/fields/ELV_Azure_Marketplace_EDW__c.field-meta.xml
<CustomField>
    <fullName>ELV_Azure_Marketplace_EDW__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Azure Marketplace (EDW)</label>
    <type>Checkbox</type>
</CustomField>