objects/Quote/fields/ELV_Bill_To_Attn__c.field-meta.xml
<CustomField>
    <fullName>ELV_Bill_To_Attn__c</fullName>
    <label>Bill To Attn</label>
    <length>250</length>
    <type>Text</type>
</CustomField>