objects/Quote/fields/ELV_Billing_Detail_Report__c.field-meta.xml
<CustomField>
    <fullName>ELV_Billing_Detail_Report__c</fullName>
    <formula>HYPERLINK(&quot;/lightning/r/Report/00O7V000006V0M7UAK/view?fv0=&quot;&amp;QuoteNumber, &quot;Billing Detail Report&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Detail Report</label>
    <type>Text</type>
</CustomField>