objects/Quote/fields/ELV_Billing_Schedule_Exist__c.field-meta.xml
<CustomField>
    <fullName>ELV_Billing_Schedule_Exist__c</fullName>
    <formula>Opportunity.BillingScheduleTotalCount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Schedule Exist</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>