objects/Quote/fields/ELV_Billing_Schedule_Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>ELV_Billing_Schedule_Total_Amount__c</fullName>
    <label>Billing Schedule Total Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>