objects/Quote/fields/ELV_BillingInfoOnQuoteDocument__c.field-meta.xml
<CustomField>
    <fullName>ELV_BillingInfoOnQuoteDocument__c</fullName>
    <label>Billing Info On Quote Document</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>