objects/Quote/fields/ELV_BillingQuoteTerms__c.field-meta.xml
<CustomField>
    <fullName>ELV_BillingQuoteTerms__c</fullName>
    <label>Billing Quote Terms</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>