objects/Quote/fields/ELV_BillingScheduleSyncStatus__c.field-meta.xml
<CustomField>
    <fullName>ELV_BillingScheduleSyncStatus__c</fullName>
    <formula>IF ( Ruby__IsPrimaryQuote__c =True, Opportunity.BillingScheduleSyncStatus__c ,&quot;Not Applicable&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Schedule Sync Status</label>
    <type>Text</type>
</CustomField>