objects/Quote/fields/ELV_Booking_Policy_Start_Date_Violated__c.field-meta.xml
<CustomField>
    <fullName>ELV_Booking_Policy_Start_Date_Violated__c</fullName>
    <formula>Opportunity.Booking_Policy_Start_Date_Violated__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Booking Policy Start Date Violated</label>
    <type>Checkbox</type>
</CustomField>