objects/Quote/fields/ELV_BurstingCount__c.field-meta.xml
<CustomField>
    <fullName>ELV_BurstingCount__c</fullName>
    <label>Bursting Count</label>
    <summaryFilterItems>
        <field>QuoteLineItem.ELV_Promotion__c</field>
        <operation>equals</operation>
        <value>Burst</value>
    </summaryFilterItems>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>