objects/Quote/fields/ELV_Business_Motion__c.field-meta.xml
<CustomField>
    <fullName>ELV_Business_Motion__c</fullName>
    <formula>IF(INCLUDES(ELV_Partner__r.Partner_Type__c, &quot;Distributor&quot;), &quot;Distributor; &quot;, null) &amp; IF(INCLUDES(ELV_Partner__r.Business_Motion__c, &quot;Distribute&quot;), &quot;Distribute&quot;, null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business Motion</label>
    <type>Text</type>
</CustomField>