objects/Quote/fields/ELV_Business_Motion_Oppty__c.field-meta.xml
<CustomField>
    <fullName>ELV_Business_Motion_Oppty__c</fullName>
    <formula>TEXT(Opportunity.Business_Motion__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business Motion Oppty</label>
    <type>Text</type>
</CustomField>