objects/Quote/fields/ELV_CARR_Formula__c.field-meta.xml
<CustomField>
    <fullName>ELV_CARR_Formula__c</fullName>
    <formula>IF(AND(Opportunity.IsClosed,Not(Opportunity.IsWon)), ELV_Incoming_ARR_formula__c * -1,IF(ELV_Day_1_ARR__c &gt;= ELV_Incoming_ARR_formula__c, 0, ELV_Day_1_ARR__c - ELV_Incoming_ARR_formula__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales CARR (Churn ARR)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>