objects/Quote/fields/ELV_Case_Study__c.field-meta.xml
<CustomField>
    <fullName>ELV_Case_Study__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Case Study</label>
    <type>Checkbox</type>
</CustomField>