objects/Quote/fields/ELV_Changes_from_Previous_Quote__c.field-meta.xml
<CustomField>
    <fullName>ELV_Changes_from_Previous_Quote__c</fullName>
    <label>Changes from Previous Quote</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Added Pricing Incentive</fullName>
            </value>
            <value>
                <fullName>Changes in Products and/or Quantity</fullName>
            </value>
            <value>
                <fullName>No previous quote</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>