objects/Quote/fields/ELV_ChangesfromPrevQuoteExpl__c.field-meta.xml
<CustomField>
    <fullName>ELV_ChangesfromPrevQuoteExpl__c</fullName>
    <label>Changes from Previous Quote Explanation</label>
    <length>2048</length>
    <type>LongTextArea</type>
</CustomField>