objects/Quote/fields/ELV_Channel_Program_Manager__c.field-meta.xml
<CustomField>
    <fullName>ELV_Channel_Program_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Channel Program Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Quotes9</relationshipName>
    <type>Lookup</type>
</CustomField>