objects/Quote/fields/ELV_Channel_Quote__c.field-meta.xml
<CustomField>
    <fullName>ELV_Channel_Quote__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Channel Quote</label>
    <type>Checkbox</type>
</CustomField>