objects/Quote/fields/ELV_COE_Approval_Needed__c.field-meta.xml
<CustomField>
    <fullName>ELV_COE_Approval_Needed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>COE Approval Needed</label>
    <type>Checkbox</type>
</CustomField>