objects/Quote/fields/ELV_Committed_Term__c.field-meta.xml
<CustomField>
    <fullName>ELV_Committed_Term__c</fullName>
    <formula>Ruby__SubscriptionTerm__c /12</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Committed Term</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>