objects/Quote/fields/ELV_Comply_Check__c.field-meta.xml
<CustomField>
    <fullName>ELV_Comply_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Comply Check</label>
    <type>Checkbox</type>
</CustomField>