objects/Quote/fields/ELV_ConsumptionRateOverride__c.field-meta.xml
<CustomField>
    <fullName>ELV_ConsumptionRateOverride__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Consumption Rate Override</label>
    <type>Checkbox</type>
</CustomField>