objects/Quote/fields/ELV_Contains_Tan_Fed_Bundle__c.field-meta.xml
<CustomField>
    <fullName>ELV_Contains_Tan_Fed_Bundle__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contains TAN-FED-BUNDLE</label>
    <type>Checkbox</type>
</CustomField>