objects/Quote/fields/ELV_ContractEndDate__c.field-meta.xml
<CustomField>
    <fullName>ELV_ContractEndDate__c</fullName>
    <description>TNCI-97</description>
    <formula>DATE(2000,01,01)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract End Date</label>
    <type>Date</type>
</CustomField>