objects/Quote/fields/ELV_Converge_Quantity__c.field-meta.xml
<CustomField>
    <fullName>ELV_Converge_Quantity__c</fullName>
    <label>Converge Quantity</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>