objects/Quote/fields/ELV_Core_Quantity__c.field-meta.xml
<CustomField>
    <fullName>ELV_Core_Quantity__c</fullName>
    <label>Core Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>