objects/Quote/fields/ELV_Count_of_Cloud_Products__c.field-meta.xml
<CustomField>
    <fullName>ELV_Count_of_Cloud_Products__c</fullName>
    <label>Count of Cloud Products</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>