objects/Quote/fields/ELV_CountCloudGovSKUs__c.field-meta.xml
<CustomField>
    <fullName>ELV_CountCloudGovSKUs__c</fullName>
    <label>Count Cloud Gov SKUs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>