objects/Quote/fields/ELV_CountCONVERSIONCLOUDSKU__c.field-meta.xml
<CustomField>
    <fullName>ELV_CountCONVERSIONCLOUDSKU__c</fullName>
    <label>Count CONVERSION-CLOUD SKU</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>