objects/Quote/fields/ELV_CountLicenseMetricActiveUser__c.field-meta.xml
<CustomField>
    <fullName>ELV_CountLicenseMetricActiveUser__c</fullName>
    <label>Count License Metric - Active User</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>