objects/Quote/fields/ELV_CountLicenseMetricManageOS__c.field-meta.xml
<CustomField>
    <fullName>ELV_CountLicenseMetricManageOS__c</fullName>
    <label>Count License Metric - Manage OS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>