objects/Quote/fields/ELV_CountnumberofSubscriptionProduct__c.field-meta.xml
<CustomField>
    <fullName>ELV_CountnumberofSubscriptionProduct__c</fullName>
    <label>Count number of Subscription Product</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>