objects/Quote/fields/ELV_CountProductLineAppliance__c.field-meta.xml
<CustomField>
    <fullName>ELV_CountProductLineAppliance__c</fullName>
    <label>Count Product Line &apos;Appliance&apos;</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>