objects/Quote/fields/ELV_CountProductTypeSubPerpetual__c.field-meta.xml
<CustomField>
    <fullName>ELV_CountProductTypeSubPerpetual__c</fullName>
    <label>Count Product Type &apos;Sub/Perpetual&apos;</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>