objects/Quote/fields/ELV_CountProductTypeTaniumCloud__c.field-meta.xml
<CustomField>
    <fullName>ELV_CountProductTypeTaniumCloud__c</fullName>
    <label>Count Product Type &apos;Tanium Cloud&apos;</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>