objects/Quote/fields/ELV_CountSCONVERSIONSKUs__c.field-meta.xml
<CustomField>
    <fullName>ELV_CountSCONVERSIONSKUs__c</fullName>
    <label>Count S-CONVERSION SKUs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>