objects/Quote/fields/ELV_CountSSRMT__c.field-meta.xml
<CustomField>
    <fullName>ELV_CountSSRMT__c</fullName>
    <label>Count SS-RMT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>