objects/Quote/fields/ELV_CountTANCOREUPG__c.field-meta.xml
<CustomField>
    <fullName>ELV_CountTANCOREUPG__c</fullName>
    <label>Count TAN-CORE-UPG</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>