objects/Quote/fields/ELV_CountTANPREMONSITEFED__c.field-meta.xml
<CustomField>
    <fullName>ELV_CountTANPREMONSITEFED__c</fullName>
    <label>Count TAN-PREM-ONSITE-FED</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>