objects/Quote/fields/ELV_CountTANTAMSUM__c.field-meta.xml
<CustomField>
    <fullName>ELV_CountTANTAMSUM__c</fullName>
    <label>Count TAN-TAM-SUM</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>