objects/Quote/fields/ELV_CountTANTRNTIER1BUNDLE__c.field-meta.xml
<CustomField>
    <fullName>ELV_CountTANTRNTIER1BUNDLE__c</fullName>
    <label>Count TAN-TRN-TIER1BUNDLE</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>