objects/Quote/fields/ELV_CountTANTRNTIER2BUNDLE__c.field-meta.xml
<CustomField>
    <fullName>ELV_CountTANTRNTIER2BUNDLE__c</fullName>
    <label>Count TAN-TRN-TIER2BUNDLE</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>