objects/Quote/fields/ELV_CPQ_Product_Filter_by_Type__c.field-meta.xml
<CustomField>
    <fullName>ELV_CPQ_Product_Filter_by_Type__c</fullName>
    <formula>IF(AND(OR(ELV_Account_Type__c = &quot;Former Customer&quot;, ELV_Account_Type__c = &quot;Prospect&quot;), NOT(ELV_Account_Segment__c = &apos;Public Sector&apos;)), False, True)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CPQ Product Filter by Type</label>
    <type>Checkbox</type>
</CustomField>