objects/Quote/fields/ELV_CreatedDateDateOnly__c.field-meta.xml
<CustomField>
    <fullName>ELV_CreatedDateDateOnly__c</fullName>
    <formula>DATEVALUE( CreatedDate )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created Date (Date Only)</label>
    <type>Date</type>
</CustomField>