objects/Quote/fields/ELV_Current_Renewal_Price_Cap__c.field-meta.xml
<CustomField>
    <fullName>ELV_Current_Renewal_Price_Cap__c</fullName>
    <description>Captures the renewal price cap applicable to this quote, not a future renewal of this quote.</description>
    <inlineHelpText>Captures the renewal price cap applicable to this quote, not a future renewal of this quote.</inlineHelpText>
    <label>Current Renewal Price Cap %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>