objects/Quote/fields/ELV_Current_Seats_Purchased__c.field-meta.xml
<CustomField>
    <fullName>ELV_Current_Seats_Purchased__c</fullName>
    <label>Current Seats Purchased</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>