objects/Quote/fields/ELV_Customer_Discount__c.field-meta.xml
<CustomField>
    <fullName>ELV_Customer_Discount__c</fullName>
    <description>Effective Total Additional Discount Amount. Used in Approvals Criteria.</description>
    <formula>ELV_Customer_Discount_Amount_Total__c /  Ruby__Subtotal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Effective Total Additional Discount Amount.</inlineHelpText>
    <label>Additional Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>