objects/Quote/fields/ELV_Customer_Logo__c.field-meta.xml
<CustomField>
    <fullName>ELV_Customer_Logo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customer Logo</label>
    <type>Checkbox</type>
</CustomField>