objects/Quote/fields/ELV_CustomerName__c.field-meta.xml
<CustomField>
    <fullName>ELV_CustomerName__c</fullName>
    <formula>Opportunity.Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Name</label>
    <type>Text</type>
</CustomField>