objects/Quote/fields/ELV_CustomerQuote__c.field-meta.xml
<CustomField>
    <fullName>ELV_CustomerQuote__c</fullName>
    <formula>IF(ELV_Partner__c = NULL, TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Quote</label>
    <type>Checkbox</type>
</CustomField>