objects/Quote/fields/ELV_Day_1_ARR__c.field-meta.xml
<CustomField>
    <fullName>ELV_Day_1_ARR__c</fullName>
    <label>Sales ARR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>