objects/Quote/fields/ELV_Day_1_ARR_calculation__c.field-meta.xml
<CustomField>
    <fullName>ELV_Day_1_ARR_calculation__c</fullName>
    <label>Sales ARR calculation</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>